swagger et readme
